# llm-cli-runner

./: .bandit  .change-patterns.toml  .dockerignore  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  BUG_FIX_SUMMARY.md  CHERRY_PICK_LIST.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile  GEMINI.md  PHASE3.md  README.md  benchmark-config.toml  coverage.xml  debug_mcp_test.py  debug_test.py  large_test_file.py  live_test_validation.txt  mcp-server-git-simple  mcp_git_test.txt  pyproject.toml  pyrightconfig.json  security_test.txt  test_file_1.txt  test_file_2.txt  test_git_tool.py  test_mcp_git.txt  test_reset.txt  test_server_validation.txt
.claude/: settings.local.json
.claude/commands/: AG_CI_fix.md  AG_local_priming.md  AG_quality_fix.md  jp_prime_context.md  references
.claude/commands/references/: github_workflows_template.yml
.claude/state/: ci_complete_fix.json  ci_complete_fix_final.json  ci_fix_report.md  ci_manual_review.md  ci_single_fix.json
.github/: README.md
.github/scripts/: verify_mcp_e2e.py
.github/workflows/: ci-framework.yml  ci-original.yml.backup  ci-simple.yml  ci.yml  claude-code-review.yml  claude.yml  cleanup-dev-files.yml  copilot-merge.yml  gemini-ai-analysis.yml  platform-validation.yml  platform-validation.yml.disabled  quality-gates.yml  test-simple.yml
.taskmaster/: config.json  session-data.json  session-notebook-guide.md  session-notebook.md  state.json  test-status-README.md  test-status.json  uckn-export-20250703_112802.json
.taskmaster/docs/: TDD_CI_STRATEGY.md  prd.txt
.taskmaster/tasks/: tasks.json
config/: token_limits.json
data/: sessions.json
docker/: README.md  docker-compose.test.yml
docker/test-environments/: Dockerfile.alpine  Dockerfile.centos  Dockerfile.debian  Dockerfile.ubuntu
docs/: CONFIGURATION_EXAMPLES.md  MERGE_CHECKLIST.md  PERFORMANCE_BENCHMARKS.md  PROVIDER_DEVELOPMENT.md  TOKEN_LIMIT_SYSTEM.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  gemini-ai-setup.md  mcp-tool-gaps.md  pixi-standardization.md
docs/api/: API_GUIDE.md  openapi.yaml
docs/deployment/: DEPLOYMENT_GUIDE.md
examples/: token_limit_example.py
scripts/: cleanup-dev-files.sh  session_notebook.py  test-docker.sh  test_runner.py  test_status_manager.py
src/mcp_server_cheap_llm/: __init__.py  __main__.py
src/mcp_server_cheap_llm/cache/: __init__.py  backends.py  key_generator.py  metrics.py  service.py
src/mcp_server_cheap_llm/core/: __init__.py  errors.py  models.py  request_processor.py
src/mcp_server_cheap_llm/providers/: __init__.py  base.py  circuit_breaker.py  gemini.py  llama.py  manager.py  openai.py  registry.py  routing.py
src/mcp_server_cheap_llm/server/: __init__.py  handlers.py  middleware.py
src/mcp_server_cheap_llm/utils/: __init__.py  config.py  connection_pool.py  errors.py  logging.py  performance.py  resource_monitor.py
src/mcp_server_git/: __init__.py  error_handling.py  logging_config.py  metrics.py  optimizations.py  protected_git_operations.py  repository_binding.py  repository_binding_tools.py  server.py  server_modular.py  server_simple.py  server_v2.py  session.py
src/mcp_server_git/applications/: __init__.py  server_application.py
src/mcp_server_git/config/: __init__.py  token_limits.py
src/mcp_server_git/configuration/: __init__.py  git_config.py  github_config.py  server_config.py
src/mcp_server_git/core/: __init__.py  handlers.py  notification_interceptor.py  tools.py
src/mcp_server_git/debugging/: __init__.py  debug_context.py  performance_profiler.py  state_inspector.py
src/mcp_server_git/frameworks/: __init__.py  mcp_server_framework.py  server_configuration.py  server_core.py  server_github.py  server_middleware.py  server_security.py
src/mcp_server_git/git/: models.py  operations.py  security.py
src/mcp_server_git/github/: __init__.py  api.py  cli.py  client.py  models.py
src/mcp_server_git/middlewares/: __init__.py  token_limit.py
src/mcp_server_git/models/: __init__.py  enhanced_validation.py  middleware.py  notifications.py  validation.py
src/mcp_server_git/operations/: __init__.py  git_operations.py  github_operations.py  server_notifications.py
src/mcp_server_llm_cli_runner/: __init__.py  __main__.py  lean_mcp_interface.py
tests/: README.md  __init__.py  conftest.py  live_smoke_test.py  test_circuit_breaker.py  test_e2e_server.py  test_environment_loading.py  test_error_handling.py  test_extended_notifications.py  test_graceful_shutdown.py  test_heartbeat.py  test_helpers.py  test_llm_compliant_server_e2e.py  test_logging_and_metrics.py  test_mcp_verification_e2e.py  test_server.py  test_session.py  test_token_management.py
tests/benchmarks/: conftest.py  test_optimization_validation.py  test_performance.py
tests/e2e/: __init__.py  test_mcp_server_e2e.py
tests/fixtures/: __init__.py  git_repos.py  github_responses.py  large_test_data.py  mcp_messages.py
tests/integration/: README.md  __init__.py  conftest.py  test_cache_integration.py  test_config_integration.py  test_infrastructure.py  test_llama_integration.py  test_logging_security.py  test_openai_integration.py  test_protocol_compliance.py  test_routing_integration.py  test_server_integration.py  test_stability.py
tests/providers/: test_manager.py
tests/stress/: conftest.py  test_concurrent.py  test_error_injection.py  test_long_running.py  test_memory_leaks.py
tests/system/: README.md
tests/unit/: README.md  __init__.py  test_basic.py  test_batch_imports.py  test_cache_backends.py  test_cache_key_generator.py  test_circuit_breaker.py  test_config.py  test_config_env.py  test_config_minimal.py  test_config_providers.py  test_config_security.py  test_connection_pool.py  test_errors.py  test_errors_mcp.py  test_gemini_provider.py  test_llama_provider.py  test_logging.py  test_logging_metrics.py  test_mcp_protocol.py  test_middleware.py  test_openai_provider.py  test_performance_metrics.py  test_providers.py  test_queue_backpressure.py  test_request_processor.py  test_resource_monitor.py  test_routing.py  test_server_handlers.py  test_streaming.py  test_tool_registry.py
(+86 files in other folders)
