[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-cheap-llm"
version = "0.1.0"
description = "A Model Context Protocol server providing access to cheap LLM alternatives (Gemini CLI, Codex, LLaMA)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Anthropic, PBC." }]
maintainers = [{ name = "Claude Code Team", email = "noreply@anthropic.com" }]
keywords = ["mcp", "llm", "gemini", "codex", "llama", "ai", "cheap"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "aiohttp>=3.8.0",
    "click>=8.1.7",
    "cryptography>=41.0.0",
    "httpx>=0.24.0",
    "llama-cpp-python>=0.2.0",
    "mcp>=1.10.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "tomli>=2.0.1;python_version<'3.11'",
]

[project.scripts]
mcp-server-cheap-llm = "mcp_server_cheap_llm:main"

[project.urls]
Homepage = "https://github.com/MementoRC/mcp-server-cheap-llm"
Repository = "https://github.com/MementoRC/mcp-server-cheap-llm"
Issues = "https://github.com/MementoRC/mcp-server-cheap-llm/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
addopts = "-v --tb=short --timeout=30"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks tests as end-to-end tests",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "property: marks tests as property-based tests",
    "performance: marks tests as performance tests",
    "requires_gemini: tests that require Gemini CLI access",
    "requires_llama: tests that require LLaMA models",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["F", "E9", "W", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F821", "F401", "F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]  # Start with linux-64 only for CI compatibility

[tool.pixi.dependencies]
# Core runtime dependencies
python = ">=3.10"
aiohttp = ">=3.8.0"
click = ">=8.1.7"
cryptography = ">=41.0.0"
httpx = ">=0.24.0"
llama-cpp-python = ">=0.2.0"
mcp = ">=1.10.0"
psutil = ">=5.9.0"
pydantic = ">=2.0.0"
python-dotenv = ">=1.0.0"
structlog = ">=24.0.0"
tomli = ">=2.0.1"

[tool.pixi.pypi-dependencies]
mcp-server-cheap-llm = { path = ".", editable = true }

# ===== TIERED QUALITY FEATURES =====
# TIER 1: Essential Quality Gates (ZERO-TOLERANCE)
[tool.pixi.feature.quality.dependencies]
# Core Testing Framework
pytest = ">=8.0.0"
pytest-cov = ">=4.0.0"
pytest-timeout = ">=2.1.0"
pytest-asyncio = ">=0.21.0"
pytest-xdist = ">=3.3.0"

# Linting & Formatting
ruff = ">=0.7.3"

# Type Checking
pyright = ">=1.1.402"

# Test dependencies
tomli-w = ">=1.0.0"  # For writing TOML files in integration tests
toml = ">=0.10.2"  # For test fixtures

[tool.pixi.feature.quality.pypi-dependencies]
# All dependencies moved to conda-forge for consistency

# TIER 2: Extended Quality & Security
[tool.pixi.feature.quality-extended.dependencies]
# Security Scanning
bandit = ">=1.7.0"
safety = ">=2.3.0"

# Code Quality Analysis
hypothesis = ">=6.0.0"

# Git Hooks
pre-commit = ">=3.0.0"

# TIER 3: CI/CD & Build
[tool.pixi.feature.quality-ci.dependencies]
# Build Tools
python-build = ">=1.0.0"
pip-audit = ">=2.6.0"
twine = ">=4.0.0"

# CI Reporting
coverage = ">=7.0.0"

# ===== LEGACY DEVELOPMENT FEATURES =====
# Keep existing dev feature for specialized tools
# ===== CI MINIMAL FEATURE =====
# For GitHub Actions compatibility - minimal dependencies only
[tool.pixi.feature.ci-minimal.dependencies]
# Minimal testing (with required pytest plugins)
pytest = "*"
pytest-cov = "*"
pytest-timeout = "*"
pytest-asyncio = "*"

# Minimal linting
ruff = "*"

# Minimal type checking
pyright = "*"

# Test dependencies
tomli-w = "*"
toml = "*"

# Core runtime dependencies (needed for type checking and testing)
python = ">=3.10"
aiohttp = ">=3.8.0"
click = ">=8.1.7"
cryptography = ">=41.0.0"
httpx = ">=0.24.0"
llama-cpp-python = ">=0.2.0"
mcp = ">=1.10.0"
psutil = ">=5.9.0"
pydantic = ">=2.0.0"
python-dotenv = ">=1.0.0"
structlog = ">=24.0.0"
tomli = ">=2.0.1"

[tool.pixi.feature.dev-specialized.dependencies]
# Development tools not needed for CI
memory_profiler = "*"
pytest-benchmark = "*"

[tool.pixi.environments]
# Basic runtime environment
default = {solve-group = "default"}

# Quality gate environments (tiered approach) - inherit from default
quality = {features = ["quality"], solve-group = "default"}
quality-extended = {features = ["quality", "quality-extended"], solve-group = "default"}
quality-full = {features = ["quality", "quality-extended", "quality-ci"], solve-group = "default"}

# Development environment (full quality + specialized tools)
dev = {features = ["quality", "quality-extended", "quality-ci", "dev-specialized"], solve-group = "default"}

# CI environment (quality + CI reporting)
ci = {features = ["quality", "quality-ci"], solve-group = "default"}

# Minimal CI environment (for GitHub Actions compatibility)
ci-minimal = {features = ["ci-minimal"], solve-group = "default"}

[tool.pixi.tasks]
# ===== TIER 1: CORE DEVELOPMENT TASKS (ESSENTIAL) =====
# Installation & Setup
install-editable = "pip install -e . --no-deps"
dev-setup = "echo 'Development environment ready'"

# Testing (ZERO-TOLERANCE QUALITY GATES)
test = "pytest tests/ -v"
test-cov = "pytest tests/ --cov=src/mcp_server_cheap_llm --cov-report=term-missing --cov-report=xml"
test-unit = "pytest tests/unit/ -v"
test-integration = "pytest tests/integration/ -v"
test-e2e = "pytest tests/e2e/ -v"
test-property = "pytest tests/ -m property -v"

# Quality Gates (CRITICAL - MUST PASS)
lint = "ruff check src/ tests/ --select=F,E9"
lint-fix = "ruff check --fix src/ tests/"
format = "ruff format src/ tests/"
format-check = "ruff format --check src/ tests/"
format-diff = "ruff format --diff src/ tests/"
typecheck = "pyright src/"

# Combined Quality Check
quality = { depends-on = ["test", "lint", "typecheck"] }

# ===== TIER 2: SECURITY & COMPLIANCE TASKS =====
# Security Scanning
security-scan = "bandit -r src/ --severity-level high"
safety-check = "safety check"

# Static Analysis Suite
static-analysis = { depends-on = ["security-scan", "safety-check"] }

# Comprehensive Check
check-all = { depends-on = ["quality", "static-analysis"] }

# ===== TIER 3: CI/CD & DEPLOYMENT TASKS =====
# CI-specific variants
ci-test = { cmd = "pytest tests/ --cov=src/mcp_server_cheap_llm --cov-report=xml --timeout=90", env = { ENVIRONMENT = "ci" } }
ci-lint = "ruff check src/ tests/ --output-format=github"
ci-format-check = "ruff format --check src/ tests/"

# Build & Deploy
build = "python -m build"
clean = "rm -rf __pycache__ .pytest_cache .coverage htmlcov .ruff_cache dist build"

# Pre-commit Integration
pre-commit = "pre-commit run --all-files"
install-pre-commit = "pre-commit install --install-hooks"

# ===== PROJECT-SPECIFIC TASKS =====
# MCP server execution
serve = "python -m mcp_server_cheap_llm"
serve-debug = { cmd = "python -m mcp_server_cheap_llm --debug", env = { LOG_LEVEL = "DEBUG" } }

# ===== LEGACY/SPECIALIZED TASKS =====
# Keep existing specialized tasks
benchmark = "pytest tests/ -m benchmark --benchmark-only --benchmark-sort=mean"
test-coverage = "pytest tests/ --cov=src/mcp_server_cheap_llm --cov-branch --cov-report=html --cov-report=xml --cov-report=json --cov-report=term-missing"
